Revision history for Perl extension Test::Excel.

1.49  Tue Jun 01 16:55:00 2021
      - Fixed bug in ignoring common shell cell range.

1.48  Tue Jun 01 14:35:00 2021
      - Updated MANIFEST to include the new test data.

1.47  Fri May 28 15:10:00 2021
      - Added ability to compare sheets ignoring given cell range.

1.46  Sun Sep 22 10:15:00 2019
      - Moved author test scripts to xt/ subfolder.

1.45  Sat Nov 10 07:25:00 2018
      - Minor cosmetic changes in the pod.

1.44  Fri Nov 09 15:10:00 2018
      - Fixed typo in the pod.
      - General code clean up.

1.43  Thu Nov 08 15:50:00 2018
      - SEE ALSO is now clickable.

1.42  Wed Nov 07 12:00:00 2018
      - Added missing parser as reported by CPAN TESTER reports.

1.41  Tue Nov 06 17:30:00 2018
      - Extended the support to .xlsx as well.

1.40  Sat Aug 26 12:00:00 2017
      - Slightly changed how we export methods.

1.39  Mon Aug 22 10:45:00 2016
      - Added unit test script t/00-load.t
      - Tidied up unit test scripts (t/meta-json.t and t/meta-yml.t).
      - Updated copyright year information in the README file.

1.38  Sat Aug 06 20:00:00 2016
      - Updated Copyright year information.

1.37  Tue Feb 17 11:20:00 2015
      - Removed BOM from the following test scripts:
        - t/30_compare_excel.t
        - t/40_unit_test.t
        - t/50_spec_test.t

1.36  Sun Feb 15 10:50:00 2015
      - Fixed the code in the pod document.

1.35  Sun Feb 15 10:35:00 2015
      - Disabled warning 'Use of uninitialized ...' thrown by Spreadsheet::ParseExcel.
      - Added SYNOPSIS to the pod document.
      - Documented the use of environment variable DEBUG.

1.34  Sun Feb 15 02:10:00 2015
      - Tidied up pod document to reflect the current state of the code.

1.33  Sun Feb 15 00:15:00 2015
      - Added 2 new methods cmp_excel_ok() and cmp_excel_not_ok().
      - Updated test script to reflect the above changes.

1.32  Sat Feb 14 23:40:18 2015